<resources>
    <string name="app_name" translatable="false">CellRest</string>
    <string name="widget_name">CellRest widget</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="renew_a">Update after</string>

    <string name="renew">Update:</string>
    <string name="restore">Restore:</string>
    <string name="days">days</string>
    <string name="days2">days</string>
    <string name="day">day</string>
    <string name="reduce_widget">Try to reduce widget size</string>

    <string name="only_text_widget">Only text widget</string>

    <string name="widget_settings_color">General settings</string>

    <string name="fill_obligatory">Fill obligatory fields</string>


    <string name="pattern_title">Pattern for text</string>
    <!--<string name="pattern_desc">Change all the text in widget. \n
        %dtr% - days to reestablish; \n
        You can use variables: \n
        %dtn% - days to renew; \n
        %inet% - your internet with units (e.g.: 150 MB or 1.9 GB); \n
        %mins% - minutes; \n
        %sms% - SMS.
    </string>-->

    <string name="error">An error occurred, please check settings</string>

    <string name="widget_settings_color_text">Widget\'s color by code</string>
    <string name="widget_settings_color_text_desc">Set widget\'s color by code</string>

    <string name="pref_title_update">Forced update</string>
    <string name="pref_description_update">Force updates the widget information on click</string>

    <string name="pref_account_pass">Password</string>

    <string name="pref_description_pass">Password for your account</string>
    <string name="pref_color">Widget View</string>

    <string name="general">Obligatory preferences</string>

    <string name="pref_title_op">Cellular operator</string>
    <string name="pref_title_font">Font</string>
    <string name="pref_desc_login">Your phone\'s number</string>
    <string name="button" translatable="false">button</string>
    <string name="button_desc">Makes a test connection to server</string>
    <string name="button_title">Test connection</string>
    <string name="pin_code_title">PIN-code</string>
    <string name="pin_code_desc">Please enter the PIN-code for your Tele2 application (it should be registered on this device)</string>

    <string name="about_description">CellRest is an application for control all traffic consumption, created to provide a great experience when dealing with cellular opearator\'s data</string>
    <string name="about_contact">If you find any bugs, please file an issue in the <![CDATA[<a href="%1$s">CellRest GitHub repository</a>]]>.
        Doing so will also show other people whether the bug has been reported already. </string>
    <string name="button_colorpicker" translatable="false">ColorPicker</string>
    <string name="button_colorpicker_title">Color</string>
    <string name="tele2">Tele2 preferences</string>
    <!--<string name="beeline">Beeline/Megafon/MTS preferences</string>-->
    <string name="beeline">Beeline and Tele2 preferences</string>
    <!--text widget-->
    <string name="pref_locale">Language</string>
    <string name="pref_size">"Text size "</string>
    <string name="pref_size_desc">Set all text widget size. Default: 16</string>
    <string name="widget_text">CellRest: Text widget</string>

    <string name="other_settings">Other</string>
    <string name="request_sent">Request sent&#8230;</string>
    <string name="help_title">Help</string>
    <string name="about_title">About</string>
    <string name="about_write"><![CDATA[<a href="%1$s">Contact the author of the application</a>]]></string>

    <string name="return_title">Type returning data</string>
    <string name="return_desc">Select the type of data in the widget: the calculation for the current day and without</string>
    <string name="updating">Updating&#8230;</string>

    <string name="server_down">Server is unreachable at the moment, please try again later</string>
    <string name="widget_other_pref">Other widget\'s preferences</string>

    <string-array name="pref_op_list_titles">
        <item>Beeline</item>
        <item>Tele2</item>
        <!--<item>Megafon (beta)</item>-->
        <item>Rostelekom</item>
        <!--<item>MTS</item>-->
    </string-array>
    <string-array name="pattern_values" translatable="false">
        <item>check_days</item>
        <item>check_data</item>
        <!--<item>check_inet</item>
        <item>check_mins</item>
        <item>check_sms</item>-->
        <item>check_bal</item>
        <item>check_ts</item>
    </string-array>

    <string name="pattern_desc">Choose what to see in text widget</string>

    <string-array name="pattern_titles">
        <item>Days to regain &amp; renew</item>
        <item>Data</item>
        <!--<item>Internet</item>
        <item>Minutes</item>
        <item>SMS</item>-->
        <item>Balance</item>
        <item>Time of update</item>
    </string-array>
    <string-array name="pattern_def_values" translatable="false">
        <item>check_days</item>
        <item>check_data</item>
        <item>check_bal</item>
        <item>check_ts</item>
        <item>hidden</item>
    </string-array>


    <string-array name="pref_op_list_values">
        <item>bee</item>
        <item>tele2</item>
        <!--<item>megafon</item>-->
        <item>rostelekom</item>
        <!--<item>mts</item>-->
    </string-array>

    <string-array name="return_type_titles">
        <item>Return data without calculations</item>
        <item>Return data with calculations</item>
    </string-array>
    <string-array name="return_type_values">
        <item>full</item>
        <item>calc</item>
    </string-array>


    <string-array name="pref_locale_titles">
        <item>Russian</item>
        <item>English</item>
        <item>Default</item>
    </string-array>
    <string-array name="pref_locale_values">
        <item>ru_RU</item>
        <item>en_US</item>
        <item>def</item>
    </string-array>


    <string-array name="pref_font_titles">
        <item>Normal</item>
        <item><b>Bold</b></item>
        <item><i>Italic</i></item>
    </string-array>
    <string-array name="pref_font_values">
        <item>n</item>
        <item>b</item>
        <item>i</item>
    </string-array>
    <string name="pref_account_login">Login</string>
    <string name="button_colorpicker_desc">Choose color for widget</string>

    <string name="add_account">Add account</string>
    <string name="title_activity_account_manager">Account Manager</string>

    <string name="title_activity_account_chooser">Account Chooser</string>
    <string name="choose_account">Tap to choose account</string>
    <string name="manager_dialog_remove_title">Delete account</string>
    <string name="manager_dialog_remove_message">Are you sure to delete account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="active">Active</string>
    <string name="switcher_dialog_remove_title">Switch account</string>
    <string name="switcher_dialog_remove_message">The app will restart</string>
    <string name="slide3title">Multi Account</string>
    <string name="slide3text">You can add more than one account.
        After adding the widget to the desktop, click on it to select the account</string>
    <string name="slide4title">Errors</string>
    <string name="slide4text">If the widget is not updated or if there appears an error message, try to perform a test connection in the general settings and find out what went wrong</string>
    <string name="cancel">Cancel</string>
    <string name="intro">Intro</string>
    <string name="tele2_reg" translatable="false">tele2_reg</string>
    <string name="tele2_reg_title">Tele2 request password</string>
    <string name="tele2_reg_desc">Request Tele2 password from \"My Tele2\" app</string>
    <string name="wait_30_sec">May be up to 30 seconds</string>
    <string name="tele2_success_reg">Registration is completed successfully</string>
    <string name="requesting">Requesting&#8230;</string>
    <string name="dialog_reg_tele2_title">Registration</string>
    <string name="dialog_reg_tele2_desc">Request registration?</string>
    <string name="calc_title">Calculations</string>
    <string name="calc_desc">Make calculations for current day</string>
    <string name="fill_obligatory_desc">Cellular operator and login are obligatory fields. Fot Tele2 you must complete registration and for Beeline/Megafon fill password from you Personal Account. Calculations checkbox allows you to choose what kind of data you want to see in a widget</string>
    <string name="calc_desc_2">Return data from provider \"As Is\"</string>
    <string name="show_login_title">Show phone number</string>
    <string name="show_login_desc">Show last 4 symbols of phone number in widget</string>
    <string name="send">Send</string>
    <string name="enter_code_d_title">SMS code</string>
    <string name="enter_code_d_msg">Please enter the code from SMS message</string>
    <string name="pref_use_only_rollover_data_title">Consider only rollovered data</string>
    <string name="pref_use_only_rollover_data_desc">Do not use leftover of current month</string>


</resources>
