<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:title="@string/general">

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:inputType="phone"
            android:key="login"
            android:maxLength="10"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_account_login" />
        <EditTextPreference
        android:capitalize="words"
            android:inputType="textPassword"
            android:summary="@string/pref_description_pass"
            android:key="password"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_account_pass" />
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue=""
            android:entries="@array/pref_op_list_titles"
            android:entryValues="@array/pref_op_list_values"
            android:key="op_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_op" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/widget_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="default_color"
            android:summary="@string/pref_description_default_color"
            android:title="@string/pref_title_default_color" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="setting_update"
            android:summary="@string/pref_description_update"
            android:title="@string/pref_title_update" />

        <ListPreference
            android:defaultValue="l"
            android:entries="@array/pref_font_titles"
            android:entryValues="@array/pref_font_values"
            android:key="font"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_font" />
    </PreferenceCategory>

</PreferenceScreen>
